--- a/app/views/frontend/sections/theme_item/_theme_item.scss
+++ b/app/views/frontend/sections/theme_item/_theme_item.scss
@@ -149,14 +149,15 @@
     cursor:pointer;
     margin: 30px 0 50px;
     padding: 14px;
+    color: white;
     display: flex;
     justify-content: center;
     background: linear-gradient(90deg, #F28402 0%, #F3AC6A 100%);
     border-radius: 40px;
     &_title{
-      margin-right: 10px;
     }
     &:hover{
+      color: white;
       box-shadow: 0px 0px 20px rgba(242, 132, 2, 0.5);
       background: linear-gradient(180deg, #F28402 0%, #F3AC6A 100%);
     }
@@ -177,11 +178,30 @@
         background: linear-gradient(180deg, #108631 0%, #32BE2F 100%);
       }
     }
+    &_cabinet{
+      padding: 8px;
+      width: 120px;
+      margin-top: 20px;
+      font-size: 14px;
+      display: flex;
+      justify-content: center;
+      &_wr{
+        display: flex;
+        justify-content: flex-end;
+      }
+    }
   }
   &_line{
     width: 100%;
     height: 0;
     padding-top: 35px;
     border-bottom: 1px solid #686666;
+  }
+}
+.cabinet_info_desc{
+  padding-top: 25px;
+  span.field__label{
+    color: whitesmoke;
+    font-size: 12px;
   }
 }
