--- a/app/views/modules/modal/_modal-custom.scss
+++ b/app/views/modules/modal/_modal-custom.scss
@@ -12,6 +12,7 @@
   overflow: hidden;
 
   &__wrapper {
+    background: #272931;
     //overflow: hidden;
     padding: 32px;
 
@@ -33,9 +34,9 @@
 
   &__title {
     font-weight: bold;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 1.15;
-    color: $color__dark;
+    color: whitesmoke;
     margin-right: 14px;
   }
 
@@ -43,18 +44,23 @@
     margin-left: auto;
     .btn__icon {
       svg * {
-        fill: $color__gray--darkest;
+        fill: #f28402;
       }
     }
   }
 
   &__form {
     &-item {
-      margin-bottom: 14px;
+      margin-top: 14px;
 
       &:last-child {
         margin-bottom: 0;
       }
+    }
+    &-inline{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
   }
 
@@ -108,8 +114,6 @@
   }
 
   &__bottom {
-    border-top: 1px solid $color__gray--3;
-    margin-top: 24px;
     padding-top: 24px;
   }
 
@@ -122,10 +126,7 @@
   }
 
   &__fieldset {
-    margin-bottom: 24px;
     padding-bottom: 24px;
-    border-bottom: 1px solid $color__gray--3;
-
     &:last-child {
       border-bottom: 0;
       margin-bottom: 0;
